--- a/app/assets/pages/signup/signup.html
+++ b/app/assets/pages/signup/signup.html
@@ -1,5 +1,5 @@
 <div class="signup-page">
-<!-- <nav class="navbar navbar-transparent navbar-absolute">
+	<!-- <nav class="navbar navbar-transparent navbar-absolute">
     	<div class="container">
         	
         	<div class="navbar-header">
@@ -49,7 +49,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3">
-						<div class="card card-signup">
+						<div class="card card-signup" style="margin-top: 100px">
 							<form class="form" method="" action="">
 								<div class="header header-primary text-center">
 									<!-- <h4>Suscríbete</h4> -->
@@ -75,9 +75,18 @@
 										<span class="input-group-addon">
 											<i class="material-icons">person_outline</i>
 										</span>
+					<!-- hardcoded -->	<div class="form-group is-empty is-focused"> <!-- is-focused adds css purple line -->						
+											<input type="text" class="form-control" placeholder="Primer Nombre..." required>
+					<!-- hardcoded -->		<span class="material-input"></span>
+					<!-- hardcoded -->	</div>
+									</div>
 
-					<!-- hardcoded -->	<div class="form-group is-empty">
-											<input type="text" class="form-control" placeholder="Nombre de usuario..." required>
+									<div class="input-group">
+										<span class="input-group-addon">
+											<i class="material-icons">mail_outline</i>
+										</span>
+					<!-- hardcoded -->	<div class="form-group is-empty">					
+											<input type="text" class="form-control" placeholder="Correo..." required>
 					<!-- hardcoded -->		<span class="material-input"></span>
 					<!-- hardcoded -->	</div>
 									</div>
@@ -86,10 +95,10 @@
 										<span class="input-group-addon">
 											<i class="material-icons">lock_outline</i>
 										</span>
-					<!-- hardcoded -->	<div class="form-group is-empty">
-					<!-- hardcoded -->		<input type="password" placeholder="Contraseña..." class="form-control" required/>
-											<span class="material-input"></span>
-					<!-- hardcoded -->	</div>
+					<!-- hardcoded -->	<div class="form-group is-empty">					
+											<input type="password" placeholder="Contraseña..." class="form-control" required/>
+					<!-- hardcoded -->		<span class="material-input"></span>
+					<!-- hardcoded -->	</div>					
 									</div>
 
 									<!-- If you want to add a checkbox to this form, uncomment this code
@@ -102,14 +111,11 @@
 									</div> -->
 								</div>
 								<div class="footer text-center">
-									<a href="dashboard.html" class="btn btn-simple btn-primary btn-lg">Entrar</a>
-									<div class="footer row text-center">
-										<div class="col-xs-6">
-											<a href="assets/pages/signup/signup" class="btn btn-simple btn-default btn-sm">Nuevo usuario?</a>
-										</div>
-										<div class="col-xs-6">
-											<a href="#" class="btn btn-simple btn-default btn-sm">Contraseña?</a>
-										</div>
+									<a href="user" class="btn btn-simple btn-primary btn-lg">Suscríbete Ya!</a>
+									<div class="row"></div>
+										<div class="col-xs-12">
+											<a href="login" class="btn btn-simple btn-default btn-sm">Ya Tengo Una Cuenta</a>
+										</div>									
 									</div>
 								</div>
 							</form>
@@ -117,15 +123,11 @@
 					</div>
 				</div>
 			</div>
-
-		<footer class="footer"></footer>
-
 		</div>
-
     </div>
 
 </div>
-<!--   Core JS Files   -->
+	<!--   Core JS Files   -->
 	<script src="assets/js/jquery.min.js" type="text/javascript"></script>	
 	<script src="assets/js/bootstrap.min.js" type="text/javascript"></script>
 	<script src="assets/js/material.min.js"></script>
