--- a/app/index.html
+++ b/app/index.html
@@ -34,6 +34,12 @@
 	<div ui-view class="" autoscroll="true"></div>
 	<script src="assets/js/app.js"></script>
 	<script src="assets/pages/login/login.js"></script>
+	<script src="assets/pages/signup/signup.js"></script>
+	<script src="assets/pages/dashboard/dashboard.js"></script>
+
+
+	
+
 
 </body>
 
