--- a/dashboard.html
+++ b/dashboard.html
@@ -3,18 +3,18 @@
 
 <head>
     <meta charset="utf-8" />
-    <link rel="apple-touch-icon" sizes="76x76" href="assets/img/apple-icon.png" />
-    <link rel="icon" type="image/png" href="assets/img/favicon.png" />
+    <link rel="apple-touch-icon" sizes="76x76" href="app/assets/img/apple-icon.png" />
+    <link rel="icon" type="image/png" href="app/assets/img/favicon.png" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <title>LOGBOOK - Dashboard</title>
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <meta name="viewport" content="width=device-width" />
     <!-- Bootstrap core CSS     -->
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="app/assets/css/bootstrap.min.css" rel="stylesheet" />
     <!--  Material Dashboard CSS    -->
-    <link href="assets/css/material-dashboard.css?v=1.2.0" rel="stylesheet" />
+    <link href="app/assets/css/material-dashboard.css?v=1.2.0" rel="stylesheet" />
     <!--  CSS for Demo Purpose, don't include it in your project     -->
-    <link href="assets/css/demo.css" rel="stylesheet" />
+    <link href="app/assets/css/demo.css" rel="stylesheet" />
     <!--     Fonts and icons     -->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=lato:400,700,300|Material+Icons' rel='stylesheet' type='text/css'>
@@ -22,7 +22,7 @@
 
 <body>
     <div class="wrapper">
-        <div class="sidebar" data-color="blue" data-image="../assets/img/sidebar-1.jpg">
+        <div class="sidebar" data-color="blue" data-image="../app/assets/img/sidebar-1.jpg">
       
             <div class="logo">
                 <a href="#" class="simple-text">
@@ -114,6 +114,9 @@
                                     <i class="material-icons">person</i>
                                     <p class="hidden-lg hidden-md">Profile</p>
                                 </a>
+                                <ul class="dropdown-menu">
+                                    <a href="#"><i class="material-icons">power_settings_new</i>Cerrar sesión</a>
+                                </ul>
                             </li>
                         </ul>
                         <form class="navbar-form navbar-right" role="search">
@@ -224,11 +227,11 @@
                                 </div>
                                 <div class="card-footer">
                                     <div class="stats">
-                                        <span class="text-success"><img src="../assets/icons/scalpel.svg"></i></span> Cirujano 
+                                        <span class="text-success"><img src="../app/assets/icons/scalpel.svg"></i></span> Cirujano 
                                         <span style="opacity: 0">__</span>
-                                        <span class="text-success"><img src="../assets/icons/scissors.svg"></i></span> 1<sup>o</sup> ayudante
+                                        <span class="text-success"><img src="../app/assets/icons/scissors.svg"></i></span> 1<sup>o</sup> ayudante
                                         <span style="opacity: 0">__</span>
-                                        <span class="text-success"><img src="../assets/icons/band-aid.svg"></i></span> 2<sup>o</sup> ayudante  
+                                        <span class="text-success"><img src="../app/assets/icons/band-aid.svg"></i></span> 2<sup>o</sup> ayudante  
                                         
                                     </div>
                                 </div>
@@ -681,27 +684,27 @@
     </div>
 </body>
 <!--   Core JS Files   -->
-<script src="assets/js/jquery-3.2.1.min.js" type="text/javascript"></script>
-<script src="assets/js/bootstrap.min.js" type="text/javascript"></script>
-<script src="assets/js/material.min.js" type="text/javascript"></script>
+<script src="app/assets/js/jquery-3.2.1.min.js" type="text/javascript"></script>
+<script src="app/assets/js/bootstrap.min.js" type="text/javascript"></script>
+<script src="app/assets/js/material.min.js" type="text/javascript"></script>
 <!--  Charts Plugin -->
-<script src="assets/js/chartist.min.js"></script>
+<script src="app/assets/js/chartist.min.js"></script>
 <!--  Dynamic Elements plugin -->
-<script src="assets/js/arrive.min.js"></script>
+<script src="app/assets/js/arrive.min.js"></script>
 <!--  PerfectScrollbar Library -->
-<script src="assets/js/perfect-scrollbar.jquery.min.js"></script>
+<script src="app/assets/js/perfect-scrollbar.jquery.min.js"></script>
 <!--  Notifications Plugin    -->
-<script src="assets/js/bootstrap-notify.js"></script>
+<script src="app/assets/js/bootstrap-notify.js"></script>
 <!--  Google Maps Plugin    -->
 <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>
 <!-- Material Dashboard javascript methods -->
-<script src="assets/js/material-dashboard.js?v=1.2.0"></script>
+<script src="app/assets/js/material-dashboard.js?v=1.2.0"></script>
 <!-- Material Dashboard DEMO methods, don't include it in your project! -->
-<script src="assets/js/demo.js"></script>
+<script src="app/assets/js/demo.js"></script>
 <script type="text/javascript">
     $(document).ready(function() {
 
-        // Javascript method's body can be found in assets/js/demos.js
+        // Javascript method's body can be found in app/assets/js/demos.js
         demo.initDashboardPageCharts();
 
     });
