--- a/entrada1.html
+++ b/entrada1.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="utf-8" />
-    <link rel="apple-touch-icon" sizes="76x76" href="assets/img/apple-icon.png" />
-    <link rel="icon" type="image/png" href="assets/img/favicon.png" />
+    <link rel="apple-touch-icon" sizes="76x76" href="app/assets/img/apple-icon.png" />
+    <link rel="icon" type="image/png" href="app/assets/img/favicon.png" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
     <title>LOGBOOK - Nueva Entrada</title>
@@ -13,15 +13,12 @@
     <meta name="viewport" content="width=device-width" />
 
     <!-- Bootstrap core CSS     -->
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="app/assets/css/bootstrap.min.css" rel="stylesheet" />
     <!--  Material Dashboard CSS    -->
-    <link href="assets/css/material-dashboard.css?v=1.2.0" rel="stylesheet" />
+    <link href="app/assets/css/material-dashboard.css?v=1.2.0" rel="stylesheet" />
 
     <!-- Datepicker -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/css/bootstrap-datepicker3.css"/>
-
-    <!--  CSS for Demo Purpose, don't include it in your project     -->
-    <link href="assets/css/demo.css" rel="stylesheet" />
 
     <!--     Fonts and icons     -->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
@@ -30,7 +27,7 @@
 
 <body>
     <div class="wrapper">
-        <div class="sidebar" data-color="blue" data-image="../assets/img/sidebar-1.jpg">
+        <div class="sidebar" data-color="blue" data-image="../app/assets/img/sidebar-1.jpg">
       
             <div class="logo">
                 <a href="#" class="simple-text">
@@ -84,10 +81,10 @@
                         </button>
                         <a class="navbar-brand" href="#">LOGBOOK Dashboard</a>
                         <ol class="breadcrumb">
-                            <li class="active"><a href="entrada1.html">1</a></li>
-                            <li><a href="entrada2.html">2</a></li>
-                            <li><a href="entrada3.html">3</a></li>
-                            <li><a href="entrada4.html">4</a></li>
+                            <li class="active"><a href="entrada1.html">ID</a></li>
+                            <li><a href="entrada2.html">DX</a></li>
+                            <li><a href="entrada3.html">QX</a></li>
+                            <li><a href="entrada4.html">OP</a></li>
                         </ol>
                     </div>
                     <div class="collapse navbar-collapse">
@@ -127,6 +124,9 @@
                                     <i class="material-icons">person</i>
                                     <p class="hidden-lg hidden-md">Profile</p>
                                 </a>
+                                <ul class="dropdown-menu">
+                                    <a href="#"><i class="material-icons">power_settings_new</i>Cerrar sesión</a>
+                                </ul>
                             </li>
                         </ul>
                         <form class="navbar-form navbar-right" role="search">
@@ -257,7 +257,7 @@
                                     <label class="custom-control custom-radio" >                
                                         <input id="radio1" name="radio" type="radio" class="custom-control-input">
                                         <figure class="figure mx-auto align-middle">
-                                            <img src="assets/icons/elective.svg" class="rounded mx-auto" alt="Ele">
+                                            <img src="app/assets/icons/elective.svg" class="rounded mx-auto" alt="Ele">
                                             <figcaption class="text-center figure-caption">Electiva</figcaption>
                                         </figure>                                        
                                     </label>          
@@ -266,7 +266,7 @@
                                     <label class="custom-control custom-radio">                
                                         <input id="radio2" name="radio" type="radio" class="custom-control-input">
                                         <figure class="mx-auto">
-                                            <img src="assets/icons/urgent.svg" class="rounded mx-auto" alt="Urg">
+                                            <img src="app/assets/icons/urgent.svg" class="rounded mx-auto" alt="Urg">
                                             <figcaption class="text-center figure-caption">Urgente</figcaption>
                                         </figure>                                        
                                     </label>
@@ -275,7 +275,7 @@
                                     <label class="custom-control custom-radio">                
                                         <input id="radio3" name="radio" type="radio" class="custom-control-input">
                                         <figure class="figure mx-auto">
-                                            <img src="assets/icons/emergente.svg" class="rounded mx-auto" alt="Emerg">
+                                            <img src="app/assets/icons/emergente.svg" class="rounded mx-auto" alt="Emerg">
                                             <figcaption class="text-center figure-caption">Emergente</figcaption>
                                         </figure>
                                     </label>
@@ -291,7 +291,7 @@
                                     <label class="custom-control custom-radio">                
                                         <input id="radio4" name="radio2" type="radio" class="custom-control-input">
                                         <figure class="figure mx-auto align-middle">
-                                            <img src="assets/icons/scalpel.svg" class="rounded mx-auto" alt="Ele">
+                                            <img src="app/assets/icons/scalpel.svg" class="rounded mx-auto" alt="Ele">
                                             <figcaption class="text-center figure-caption">Cirujano</figcaption>
                                         </figure>
                                         <span class="custom-control-indicator"></span>                
@@ -301,7 +301,7 @@
                                     <label class="custom-control custom-radio">                
                                         <input id="radio5" name="radio2" type="radio" class="custom-control-input">
                                         <figure class="mx-auto">
-                                            <img src="assets/icons/scissors.svg" class="rounded align-middle mx-auto" alt="Urg">
+                                            <img src="app/assets/icons/scissors.svg" class="rounded align-middle mx-auto" alt="Urg">
                                             <figcaption class="text-center figure-caption">1<sup>o</sup> Ayudante</figcaption>
                                         </figure>
                                         <span class="custom-control-indicator"></span>
@@ -311,7 +311,7 @@
                                     <label class="custom-control custom-radio">                
                                         <input id="radio6" name="radio2" type="radio" class="custom-control-input">
                                         <figure class="figure mx-auto">
-                                            <img src="assets/icons/band-aid.svg" class="rounded mx-auto" alt="Emerg">
+                                            <img src="app/assets/icons/band-aid.svg" class="rounded mx-auto" alt="Emerg">
                                             <figcaption class="text-center figure-caption">2<sup>o</sup> Ayudante</figcaption>
                                         </figure>
                                         <span class="custom-control-indicator"></span>              
@@ -349,25 +349,25 @@
     </div>
 </body>
 <!--   Core JS Files   -->
-<script src="assets/js/jquery-3.2.1.min.js" type="text/javascript"></script>
-<script src="assets/js/bootstrap.min.js" type="text/javascript"></script>
-<script src="assets/js/material.min.js" type="text/javascript"></script>
+<script src="app/assets/js/jquery-3.2.1.min.js" type="text/javascript"></script>
+<script src="app/assets/js/bootstrap.min.js" type="text/javascript"></script>
+<script src="app/assets/js/material.min.js" type="text/javascript"></script>
 <!-- Bootstrap Date-Picker Plugin -->
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/js/bootstrap-datepicker.min.js"></script>
 
 
 <!--  Charts Plugin -->
-<script src="assets/js/chartist.min.js"></script>
+<script src="app/assets/js/chartist.min.js"></script>
 <!--  Dynamic Elements plugin -->
-<script src="assets/js/arrive.min.js"></script>
+<script src="app/assets/js/arrive.min.js"></script>
 <!--  PerfectScrollbar Library -->
-<script src="assets/js/perfect-scrollbar.jquery.min.js"></script>
+<script src="app/assets/js/perfect-scrollbar.jquery.min.js"></script>
 <!--  Notifications Plugin    -->
-<script src="assets/js/bootstrap-notify.js"></script>
+<script src="app/assets/js/bootstrap-notify.js"></script>
 <!--  Google Maps Plugin    -->
 <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>
 <!-- Material Dashboard javascript methods -->
-<script src="assets/js/material-dashboard.js?v=1.2.0"></script>
+<script src="app/assets/js/material-dashboard.js?v=1.2.0"></script>
 <!--  Plugins for DateTimePicker -->
 
 <script>
@@ -388,7 +388,7 @@
 <script type="text/javascript">
     $(document).ready(function() {
 
-        // Javascript method's body can be found in assets/js/demos.js
+        // Javascript method's body can be found in app/assets/js/demos.js
         demo.initDashboardPageCharts();
 
     });
