--- a/login.html
+++ b/login.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8" />
-	<link rel="apple-touch-icon" sizes="76x76" href="assets/img/apple-icon.png">
-	<link rel="icon" type="image/png" href="assets/img/favicon.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="app/assets/img/apple-icon.png">
+	<link rel="icon" type="image/png" href="app/assets/img/favicon.png">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
 	<title>LOGBOOK – Bitácora médica fácil y efectiva</title>
@@ -16,8 +16,8 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
 
 	<!-- CSS Files -->
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="assets/css/material-kit.css" rel="stylesheet"/>
+    <link href="app/assets/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="app/assets/css/material-kit.css" rel="stylesheet"/>
 
 </head>
 
@@ -68,7 +68,7 @@
     </nav> -->
 
     <div class="wrapper">
-		<div class="header header-filter" style="background-image: url('assets/img/background-img.jpg'); background-size: cover; background-position: top center;">
+		<div class="header header-filter" style="background-image: url('app/assets/img/background-img.jpg'); background-size: cover; background-position: top center;">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3">
@@ -88,7 +88,7 @@
 										</a>
 									</div> -->
 									<div class="social-line">
-										<img src="assets/icons/logbook_white.png">
+										<img src="app/assets/icons/logbook_white.png">
 									</div>
 								</div>
 								<p class="text-divider">Bitácora médica fácil y efectiva</p>
@@ -146,17 +146,17 @@
 
 </body>
 	<!--   Core JS Files   -->
-	<script src="assets/js/jquery.min.js" type="text/javascript"></script>
-	<script src="assets/js/bootstrap.min.js" type="text/javascript"></script>
-	<script src="assets/js/material.min.js"></script>
+	<script src="app/assets/js/jquery.min.js" type="text/javascript"></script>
+	<script src="app/assets/js/bootstrap.min.js" type="text/javascript"></script>
+	<script src="app/assets/js/material.min.js"></script>
 
 	<!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
-	<script src="assets/js/nouislider.min.js" type="text/javascript"></script>
+	<script src="app/assets/js/nouislider.min.js" type="text/javascript"></script>
 
 	<!--  Plugin for the Datepicker, full documentation here: http://www.eyecon.ro/bootstrap-datepicker/ -->
-	<script src="assets/js/bootstrap-datepicker.js" type="text/javascript"></script>
+	<script src="app/assets/js/bootstrap-datepicker.js" type="text/javascript"></script>
 
 	<!-- Control Center for Material Kit: activating the ripples, parallax effects, scripts from the example pages etc -->
-	<script src="assets/js/material-kit.js" type="text/javascript"></script>
+	<script src="app/assets/js/material-kit.js" type="text/javascript"></script>
 
 </html>
