Linked CSS for test files, new sidebar image, Datos Opcionales as check boxes, La Ciguria Fue button (needs toggle styling)

--- a/entrada2.html
+++ b/entrada2.html
@@ -30,7 +30,7 @@
 
 <body>
     <div class="wrapper">
-        <div class="sidebar" data-color="blue" data-image="../app/assets/img/sidebar-1.jpg">
+        <div class="sidebar" data-color="blue" data-image="app/assets/img/sidebar-1.jpg">
       
             <div class="logo">
                 <a href="dashboard.html" class="simple-text">
