--- a/entrada1.html
+++ b/entrada1.html
@@ -27,7 +27,7 @@
 
 <body>
     <div class="wrapper">
-        <div class="sidebar" data-color="blue" data-image="../app/assets/img/sidebar-1.jpg">
+        <div class="sidebar" data-color="blue" data-image="app/assets/img/sidebar-1.jpg">
       
             <div class="logo">
                 <a href="#" class="simple-text">
@@ -36,7 +36,7 @@
             </div>
             <div class="sidebar-wrapper">
                 <ul class="nav">
-                    <li>
+                    <li class="active">
                         <a href="dashboard.html">
                             <i class="material-icons">dashboard</i>
                             <p>Dashboard</p>
@@ -48,7 +48,7 @@
                             <p>Bitácora</p>
                         </a>
                     </li>  
-                    <li class="active">
+                    <li>
                         <a href="entrada1.html">
                             <i class="material-icons">note_add</i>
                             <p>Nueva Entrada</p>
@@ -59,7 +59,8 @@
                             <i class="material-icons">person</i>
                             <p>Mi Perfil</p>
                         </a>
-                    </li>        
+                    </li>
+                                    
                     <li class="active-pro">
                         <a href="#">
                             <i class="material-icons">error</i>
@@ -251,6 +252,9 @@
                         <div class="col-md-6">
                             <div class="card"> 
                                 <div class="card-header2 card-header-inline" data-background-color="green">
+                                    <span class="input-group-btn inline" data-background-color="">
+                                        <button class="btn btn-info btn-sim btn-rounded btn-sm pull-right" type="button">Simulación</button>
+                                    </span>
                                     <p>La Cirugía Fue</p>
                                 </div>
                                 <div class="card-content col-xs-4">
